# commanderbot-py

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/: CODEOWNERS
commanderbot/core/: application_emoji_manager.py  cli.py  command_tree.py  commander_bot.py  commander_bot_base.py  config.py  configured_extension.py  error_handling.py  exceptions.py  help_command.py  logging.py  utils.py
commanderbot/ext/allay/: allay_cog.py
commanderbot/ext/automod/: __init__.py  automod_action.py  automod_cog.py  automod_condition.py  automod_data.py  automod_entity.py  automod_event.py  automod_guild_state.py  automod_json_store.py  automod_options.py  automod_rule.py  automod_state.py  automod_store.py  automod_trigger.py  utils.py
commanderbot/ext/automod/actions/: add_reactions.py  add_users_to_thread.py  check_messages.py  edit_thread.py  log_message.py  remove_own_reactions.py  remove_reactions.py  send_message.py  wait.py
commanderbot/ext/automod/conditions/: all_of.py  any_of.py  message_content_contains.py  message_content_matches.py  message_has_attachments.py  message_has_embeds.py  message_has_links.py  message_has_mentions.py  message_mentions_roles.py  none_of.py  not.py  thread_auto_archive_duration.py  wait.py
commanderbot/ext/automod/events/: message_deleted.py  message_edited.py  message_sent.py  reaction_added.py  reaction_removed.py
commanderbot/ext/automod/triggers/: member_typing.py  member_updated.py  mentions_removed_from_message.py  message.py  reaction.py
commanderbot/ext/faq/: __init__.py  faq_cog.py  faq_data.py  faq_exceptions.py  faq_guild_state.py  faq_json_store.py  faq_options.py  faq_state.py  faq_store.py
commanderbot/ext/feed/: __init__.py  feed_cog.py  feed_options.py
commanderbot/ext/feed/providers/: __init__.py  utils.py  (+1 more)
commanderbot/ext/feeds/: __init__.py  feeds_cog.py  feeds_data.py  feeds_exceptions.py  feeds_guild_state.py  feeds_json_store.py  feeds_options.py  feeds_state.py  feeds_store.py
commanderbot/ext/friday/: __init__.py  friday_cog.py  friday_data.py  friday_exceptions.py  friday_guild_state.py  friday_json_store.py  friday_options.py  friday_state.py  friday_store.py
commanderbot/ext/help_chat/: __init__.py  help_chat_cog.py  help_chat_guild_state.py  help_chat_options.py  help_chat_report.py  help_chat_state.py  help_chat_store.py
commanderbot/ext/help_forum/: __init__.py  help_forum_cog.py  help_forum_data.py  help_forum_guild_state.py  help_forum_json_store.py  help_forum_options.py  help_forum_state.py  help_forum_store.py
commanderbot/ext/invite/: __init__.py  invite_cog.py  invite_data.py  invite_exceptions.py  invite_guild_state.py  invite_json_store.py  invite_options.py  invite_state.py  invite_store.py
commanderbot/ext/jira/: __init__.py  jira_client.py  jira_cog.py  jira_exceptions.py  jira_issue.py  jira_options.py  jira_utils.py
commanderbot/ext/manifest/: __init__.py  manifest_cog.py  manifest_data.py  manifest_exceptions.py  manifest_version_manager.py
commanderbot/ext/mccq/: __init__.py  mccq_cog.py  mccq_exceptions.py  mccq_manager.py  mccq_options.py
commanderbot/ext/mcdoc/: __init__.py  mcdoc_cog.py  mcdoc_exceptions.py  mcdoc_options.py  mcdoc_symbols.py  mcdoc_types.py
commanderbot/ext/moderation/: __init__.py  moderation_cog.py  moderation_exceptions.py  moderation_views.py
commanderbot/ext/ping/: ping_cog.py
commanderbot/ext/poster_board/: poster_board_cog.py
commanderbot/ext/quote/: quote_cog.py  quote_exceptions.py
commanderbot/ext/roles/: __init__.py  roles_cog.py  roles_data.py  roles_guild_state.py  roles_json_store.py  roles_options.py  roles_result.py  roles_state.py  roles_store.py
commanderbot/ext/stacktracer/: __init__.py  stacktracer_cog.py  stacktracer_data.py  stacktracer_guild_state.py  stacktracer_json_store.py  stacktracer_options.py  stacktracer_state.py
commanderbot/ext/status/: status_cog.py  status_details.py
commanderbot/ext/sudo/: sudo_cog.py  sudo_data.py  sudo_exceptions.py
commanderbot/ext/vote/: vote_cog.py
commanderbot/ext/xkcd/: __init__.py  xkcd_client.py  xkcd_cog.py  xkcd_exception.py  xkcd_options.py
commanderbot/lib/: __init__.py  allowed_mentions.py  color.py  constants.py  dialogs.py  event_data.py  exceptions.py  extended_json_encoder.py  from_data_mixin.py  intents.py  json.py  log_options.py  predicates.py  responsive_exception.py  role_set.py  rss.py  shallow_formatter.py  type_predicates.py  types.py
commanderbot/lib/app_commands/: checks.py  transformers.py  utils.py
commanderbot/lib/cogs/: __init__.py  state.py  views.py
commanderbot/lib/commands/: checks.py  converters.py
commanderbot/lib/guards/: channel_types_guard.py  channels_guard.py  reactions_guard.py  roles_guard.py
commanderbot/lib/interactions/: checks.py  transformers.py
commanderbot/lib/utils/: __init__.py  channels.py  datetimes.py  json_path.py  timedeltas.py  utils.py  yield_fields.py
(+18 files in other folders)
