[project]
name = "commanderbot"
description = "A collection of utilities and extensions for discord.py bots."
version = "0.20.0a28"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Ersatz", email = "ersatz0077@gmail.com" },
    { name = "Arcensoth", email = "arcensoth@gmail.com" },
]
license = { file = "LICENSE.txt" }
readme = { file = "README.md", content-type = "text/markdown" }

keywords = ["discord", "bot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    # Core dependencies.
    "discord-py>=2.4.0",
    "python-dotenv>=1.0.0",

    # For using newer type hints in older Python versions (For now).
    "typing-extensions>=4.12.0",

    # These are used for logging.
    "colorama>=0.4.0",
    "colorlog>=6.8.0",

    # These are used for managing SQLite databases.
    "aiosqlite>=0.20.0",
    "sqlalchemy>=1.4.0,<2.0.0",

    # These are used for handling text-based data (json, yaml, etc).
    "jsonpath-ng>=1.6.0",
    "pyyaml>=6.0.0",

    # The rest are for various extensions.
    "aiohttp>=3.10.0",
    "emoji>=2.0.0",
    "allay>=1.3.0",
    "mccq>=1.0.0",
    "psutil>=6.0.0",

]

[project.urls]
Homepage = "https://github.com/MinecraftCommands/commanderbot-py"
Repository = "https://github.com/MinecraftCommands/commanderbot-py"
Changelog = "https://github.com/MinecraftCommands/commanderbot-py/blob/main/CHANGELOG.md"

[project.scripts]
commanderbot = "commanderbot:__main__"

[tool.uv]
dev-dependencies = ["black>=24.0.0", "isort>=5.13.0"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
